test/ns1/allow-policy-gr.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-green-rain-1
  namespace: n1
spec:
  podSelector:
    matchLabels:
      app: green-rain
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: sleep
