test/ns1/allow-policy-ns2.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-httpbin-21
  namespace: n1
spec:
  podSelector:
    matchLabels:
      app: httpbin
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: sleep
        namespaceSelector:
          matchLabels:
            name: n2
