test/ns1/allow-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-httpbin-1
  namespace: n1
spec:
  podSelector:
    matchLabels:
      app: httpbin
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: sleep
