test/ns1/default-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: n1-deny-ns1
  namespace: n1
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress

# apiVersion: projectcalico.org/v3
# kind: NetworkPolicy
# metadata:
#   name: n1
# spec:
#   selector: all()
#   types:
#     - Ingress
#     - Egress
