test/ns1/green-rain.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-rain
  namespace: n1
spec:
  selector:
    matchLabels:
      app: green-rain
  template:
    metadata:
      labels:
        app: green-rain
    spec:
      containers:
      - name: green-rain
        image: ductn4/green-rain:v2
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: green-rain
  namespace: n1
spec:
  selector:
    app: green-rain
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30003
